Don't clear selection on right-click.

Right-clicks used to start drag selection mode, which in practice made them
clear the selection when outside the selection area (when inside the
selection, this was suppressed via drag-and-drop codepaths).  This
recently started affecting right-clicks during left-click-holds on
Windows -- but while investigating this, I found that the clearing
behavior in the first place seems to be a preexisting bug (Firefox for
Windows and Notepad don't do it, for example), so just suppress it
entirely by checking for left-mouse-button.

On Mac, the platform convention of right-click single-word selection
should still work since it's handled by a separate codepath (and covered
by the layout test context-menu-text-selection.html).

BUG=756709

Change-Id: Ib10d55ac968bbbcb6d3664dc0074bdd48c5170d1